--- a/place_finder/pubspec.yaml
+++ b/place_finder/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^9.0.2
+  google_maps_flutter: ^2.2.8
+  google_maps_flutter_web: ^0.4.0+9
 
 dev_dependencies:
   flutter_test:
