--- a/place_finder/pubspec.yaml
+++ b/place_finder/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.4.0+9
   http: ^1.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +22,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+assets:
+  - images/mark.png
