--- a/place_finder/pubspec.yaml
+++ b/place_finder/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.4.0+9
   http: ^1.0.0
+  map_launcher: ^2.5.0+1
   provider: ^6.0.5
 
 dev_dependencies:
